syntax = "proto3";

package vdp.connector.v1alpha;

// Google API
import "google/api/field_behavior.proto";

import "../../../vdp/healthcheck/v1alpha/healthcheck.proto";
import "../../../vdp/pipeline/v1alpha/pipeline.proto";

// LivenessRequest represents a request to check a service liveness status
message LivenessRequest {
  // HealthCheckRequest message
  optional healthcheck.v1alpha.HealthCheckRequest health_check_request = 1
      [ (google.api.field_behavior) = OPTIONAL ];
}

// LivenessResponse represents a response for a service liveness status
message LivenessResponse {
  // HealthCheckResponse message
  healthcheck.v1alpha.HealthCheckResponse health_check_response = 1;
}

// ReadinessRequest represents a request to check a service readiness status
message ReadinessRequest {
  // HealthCheckRequest message
  optional healthcheck.v1alpha.HealthCheckRequest health_check_request = 1
      [ (google.api.field_behavior) = OPTIONAL ];
}

// ReadinessResponse represents a response for a service readiness status
message ReadinessResponse {
  // HealthCheckResponse message
  healthcheck.v1alpha.HealthCheckResponse health_check_response = 1;
}
